# patreon-mcp-server

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/: mcp_server.py  server.py  tools.py
src/patreon_mcp_server/: mcp_server.py  models.py  server.py  tools.py
src/utils/: client.py
